--- a/Resources/views/widget.html.twig
+++ b/Resources/views/widget.html.twig
@@ -13,12 +13,12 @@
 <style>
 	#id_weather_widget {
 		position: relative;
-		height: 150px;
+		height: 100%;
 		width: 100%;
 		background-size: cover;
 	}
 	#id_weather_widget.cloud {
-		background-image: url('{{ w_image64("Resources/public/widget/images/cloud.jpg") }}');
+		background-image: url('{{ image64("Resources/public/widget/images/cloud.jpg") }}');
 	}
 	#id_weather_widget > div {
 		position: absolute;
