--- a/Resources/views/widget.html.twig
+++ b/Resources/views/widget.html.twig
@@ -18,7 +18,7 @@
 		background-size: cover;
 	}
 	#id_weather_widget.cloud {
-		background-image: url('{{ image64("Resources/public/widget/images/cloud.jpg") }}');
+		background-image: url('{{ image64(ww_r2p("Resources/public/widget/images/cloud.jpg")) }}');
 	}
 	#id_weather_widget > div {
 		position: absolute;
